Updated fade in points for text divs, added potential other fix for ios devices stretching parallax wallpapers

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -522,6 +522,9 @@ body:before {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+  top: 0;
+  left: 0;
+  right: 0;
 }
 
 html {
